trybuild_tests/tests/trybuild/fail/model_tuple_struct.rs
use butane::model;

// This should fail - fields must be named (tuple struct)
#[model]
struct Post(i64, String, String);

fn main() {}
